# FieldsOfFury

./: BaseCharacter.cpp  BaseCharacter.h  Button.cpp  Button.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Prop.cpp  Prop.h  TODOs.txt  main.cpp
assets/nature_tileset/: IceTileset.tsx  Level 1.tmx  Nature - Level 2 (winter).tmx  Nature - Level 3 (autumn).tmx  Nature rgp tileset.tsx  RPG Nature Tileset Autumn.tsx
